# whisperx-transcriber

./: .gitignore  LICENSE  README.md  api.py  pyproject.toml  transcribe.py
docs/en-us/: README.md
docs/ko-kr/: README.md
electron/: index.html  main.js  package.json
